--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.0.2",
+    "notifee": "^0.0.1",
     "react": "18.3.1",
     "react-native": "0.75.3"
   },
